src/integration/snapshots/rustclean__integration__screens__report-device-backups-empty-en.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  iPhone / iPad backups — /Users/demo  │  0 rows, 0 B (on disk)
──────────────────────────────────── Date: ██ ≤ 7 days   ██ ≤ 30 days   ██ ≤ 1 year   ██ > 1 year
 No iPhone or iPad backups below this folder. Finder and iTunes keep them in MobileSync/Backup.
























────────────────────────────────────────────────────────────────────────────────────────────────────
No results.
 ?  help   ↑↓  move   Space  to basket   t  all   f  age filter   x  move to trash   S  basket   Ent
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 1: 36+7 White/- BOLD | 43+2 Green/- | 45+12 White/- | 57+2 Cyan/- | 59+13 White/- | 72+2 Yellow/- | 74+12 White/- | 86+2 Red/- | 88+12 White/-
 2: 0+95 White/-
28: 0+100 Gray/-
29: 0+3 Black/Gray | 10+4 Black/Gray | 21+7 Black/Gray | 40+3 Black/Gray | 49+3 Black/Gray | 65+3 Black/Gray | 84+3 Black/Gray | 96+4 Black/Gray
