src/integration/snapshots/rustclean__integration__screens__report-device-backups-empty-tr.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  iPhone / iPad yedekleri — /Users/demo  │  0 satır, 0 B (diskte)
─────────────────────────────────────── Tarih: ██ ≤ 7 gün   ██ ≤ 30 gün   ██ ≤ 1 yıl   ██ > 1 yıl
 Bu klasörün altında iPhone / iPad yedeği yok. Finder ve iTunes yedekleri MobileSync/Backup içinde
 tutar.























────────────────────────────────────────────────────────────────────────────────────────────────────
Sonuç yok.
 ?  yardım   ↑↓  gez   Space  sepete   t  tümü   f  yaş filtresi   x  çöpe taşı   S  sepet   Enter
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 1: 39+8 White/- BOLD | 47+2 Green/- | 49+11 White/- | 60+2 Cyan/- | 62+12 White/- | 74+2 Yellow/- | 76+11 White/- | 87+2 Red/- | 89+11 White/-
 2: 0+98 White/-
 3: 0+7 White/-
28: 0+100 Gray/-
29: 0+3 Black/Gray | 12+4 Black/Gray | 22+7 Black/Gray | 38+3 Black/Gray | 48+3 Black/Gray | 66+3 Black/Gray | 81+3 Black/Gray | 92+7 Black/Gray
