src/integration/snapshots/rustclean__integration__screens__report-device-backups-en.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  iPhone / iPad backups — /Users/demo  │  3 rows, 81.0 GiB (on disk)
──────────────────────────────────── Date: ██ ≤ 7 days   ██ ≤ 30 days   ██ ≤ 1 year   ██ > 1 year
      Size        Count      Modified         Location                       Details
▶ [ ]    38.0 GiB          1 2026-09-21 12:00 Demo iPhone · iPhone 13 Pro    2026-09-19 · newest · e
  [ ]    31.0 GiB          1 2026-09-21 12:00 Demo iPhone · iPhone 13 Pro    2025-06-08 · encrypted
  [ ]    12.0 GiB          1 2026-09-21 12:00 Studio iPad · iPad13,4         2026-03-15 · newest · i





















────────────────────────────────────────────────────────────────────────────────────────────────────
A deleted backup cannot restore the device: keep each device's newest backup.
 ?  help   ↑↓  move   Space  to basket   t  all   f  age filter   x  move to trash   S  basket   Ent
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 1: 36+7 White/- BOLD | 43+2 Green/- | 45+12 White/- | 57+2 Cyan/- | 59+13 White/- | 72+2 Yellow/- | 74+12 White/- | 86+2 Red/- | 88+12 White/-
 2: 0+100 -/- BOLD | UNDERLINED
 3: 0+100 White/Indexed(238) BOLD
 4: 2+3 Gray/- | 18+10 Gray/- | 29+16 Cyan/- | 46+27 LightBlue/- BOLD | 77+23 Gray/-
 5: 2+3 Gray/- | 18+10 Gray/- | 29+16 Cyan/- | 46+22 LightBlue/- BOLD | 77+23 Gray/-
28: 0+100 Gray/-
29: 0+3 Black/Gray | 10+4 Black/Gray | 21+7 Black/Gray | 40+3 Black/Gray | 49+3 Black/Gray | 65+3 Black/Gray | 84+3 Black/Gray | 96+4 Black/Gray
