src/integration/snapshots/rustclean__integration__screens__report-downloads-30-days-tr.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  İndirilen kurulum dosyaları ve arşivler · ≥ 30 gündür dokunulmamış — /Users/demo  │  2 s
─────────────────────────────────────── Tarih: ██ ≤ 7 gün   ██ ≤ 30 gün   ██ ≤ 1 yıl   ██ > 1 yıl
      Boyut       Adet       Son değişiklik   Konum                                   Ayrıntı
▶ [ ]     3.0 GiB            27.08.2025 12:00 Downloads/Xcode_16.xip                  arşiv
  [ ]   450.0 MiB            15.03.2026 12:00 Downloads/setup.dmg                     disk görüntüsü






















────────────────────────────────────────────────────────────────────────────────────────────────────
Kurulumu bitmiş yükleyiciler genelde yeniden indirilebilir; açılmış arşivlerin içeriği yerinde durur
 ?  yardım   ↑↓  gez   Space  sepete   t  tümü   f  yaş filtresi   x  çöpe taşı   S  sepet   Enter
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 1: 39+8 White/- BOLD | 47+2 Green/- | 49+11 White/- | 60+2 Cyan/- | 62+12 White/- | 74+2 Yellow/- | 76+11 White/- | 87+2 Red/- | 89+11 White/-
 2: 0+100 -/- BOLD | UNDERLINED
 3: 0+100 White/Indexed(238) BOLD
 4: 2+3 Gray/- | 29+16 Yellow/- | 86+14 Gray/-
28: 0+100 Gray/-
29: 0+3 Black/Gray | 12+4 Black/Gray | 22+7 Black/Gray | 38+3 Black/Gray | 48+3 Black/Gray | 66+3 Black/Gray | 81+3 Black/Gray | 92+7 Black/Gray
